# flux

./: Cargo.toml  README.md  build.rs  sh.exe.stackdump  splash.psd
examples/: simple_ui.rs
proto/: flux.proto
src/: constants.rs  dynamic.rs  functions.rs  lib.rs  utils.rs
src/binding/: bindable.rs  mod.rs  systems.rs
src/binding/list/: mod.rs
src/binding/optional_path/: access.rs  error.rs  mod.rs  parse.rs
src/binding/property/: mod.rs
src/builder/: builder.rs  child_builder.rs  entity_builder.rs  mod.rs
src/client/: mod.rs
src/database/: mod.rs
src/elements/: interact_state.rs  mod.rs
src/plugin/: database.rs  mod.rs  multiplexer.rs
src/plugin/database/: commands.rs  extensions.rs  mod.rs  surrealdb.rs
src/plugin/systems/: mod.rs
src/server/: axum.rs  mod.rs
src/systems/: mod.rs
src/types/: async_runner.rs  config.rs  dynamic_struct_serde.rs  dynamic_variant_serde.rs  in_option.rs  mod.rs
