[package]
name = "flux"
version = "0.1.0"
edition = "2024"
exclude = ["/examples"]

[features]
default = []
bevy = ["dep:bevy", "flux_core/bevy", "bevy-trait-query", "bevy-async-ecs", "futures"]
dynamic_linking = ["bevy?/dynamic_linking"]
tonic = ["dep:tonic", "prost"]
prost = ["dep:prost"]
futures = ["dep:futures", "futures-util", "future_handles"]

[dependencies]
flux_core = { git = "https://github.com/empathic-ai/flux-core.git", default-features = false }
flux_derive = { git = "https://github.com/empathic-ai/flux-derive.git", default-features = false }
serde = { version = "1.0.149", features = ["derive"] }
anyhow = { version = "1.0.71", default-features = false }
uuid = { version = "1.2.2", features = ["v4"] }
prost = { version = "0.13.3", optional = true }
documented = "0.1.2"
# TODO: Replace with crates.io reference once Tonic officially supports Axum v0.8
tonic = { version = "0.12.3", default-features = false, features = ["prost", "codegen"], optional = true }

futures = { version = "0.3.25", optional = true }
futures-util = { version = "0.3.31", optional = true }
future_handles = { version = "0.2.0", features = ["sync"], optional = true }
smart-clone = "0.1.0"

[target.'cfg(all(not(target_arch = "xtensa")))'.dependencies]
prost-types = "0.13.3"
# tonic = { git = "https://github.com/Catchawink/tonic.git", branch = "hyper-1.0", default-features = false, features = ["prost", "codegen"] }
common = { git = "https://github.com/empathic-ai/common.git" }
lazy_static = "1.4.0"

surrealdb = { version = "2.1.4", default-features = false, features = ["protocol-ws"] }

# bevy_cobweb = { version = "0.10.1", optional = true }
# bevy_cobweb_ui = { version = "0.5.1", default-features = false, optional = true }
bevy-async-ecs = { version = "=0.7.0", optional = true }
bevy-trait-query = { version = "0.7.0", optional = true }
nameof = "1.2.2"

[dependencies.bevy]
version = "=0.15.0"
default-features = false
features = ["bevy_ui", "bevy_asset"] 
optional = true

[build-dependencies]
tonic-build = { version = "0.10.2", default-features = false, features = ["prost"] }
prost-build = "0.12.3"
