[package]
name = "flux"
version = "0.1.0"
edition = "2024"
exclude = ["/examples"]

[features]
default = ["bevy", "futures", "tokio"]
bevy = ["dep:bevy", "flux_core/bevy", "common/bevy", "bevy-trait-query", "reflect-steroids"]
bevy_ui = []
dynamic_linking = ["bevy?/dynamic_linking"]
tonic = ["dep:tonic", "prost"]
prost = ["dep:prost", "prost-types"]
tokio = ["bevy-wasm-tasks"]
futures = ["bevy-async-ecs", "dep:futures", "futures-util", "future_handles"]
server = []
client = []
surrealdb = ["dep:surrealdb"]

[dependencies]
bevy = { git = "https://github.com/empathic-ai/bevy.git", branch = "reflect/serializable-dynamic-types", default-features = false, features = ["serialize", "bevy_state", "bevy_color"], optional = true }
# "bevy_ui", "bevy_asset", "bevy_state", "bevy_scene"
reflect-steroids = { git = "https://github.com/Catchawink/reflect-steroids.git", optional = true }
flux_core = { git = "https://github.com/empathic-ai/flux-core.git", default-features = false }
flux_derive = { git = "https://github.com/empathic-ai/flux-derive.git", default-features = false }
serde = { version = "1.0.149", features = ["derive"] }
anyhow = { version = "1.0.71", default-features = false }
uuid = { version = "1.13", features = ["v4"] }
prost = { version = "0.13.3", optional = true }
documented = "0.1.2"
# TODO: Replace with crates.io reference once Tonic officially supports Axum v0.8
tonic = { version = "0.12.3", default-features = false, features = ["prost", "codegen"], optional = true }
serde_json = "1.0"
futures = { version = "0.3.25", optional = true }
futures-util = { version = "0.3.31", optional = true }
future_handles = { version = "0.2.0", features = ["sync"], optional = true }
smart-clone = "0.1.0"
# bevy_async_task = "0.5.0"
derive_more = { version = "1", default-features = false, features = [
  "error",
  "from",
  "display",
] }
bevy-trait-query = { git = "https://github.com/Catchawink/bevy-trait-query.git", branch = "reflect/serializable-dynamic-types", optional = true }
common = { git = "https://github.com/empathic-ai/common.git", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }
nameof = "1.2.2"
lazy_static = "1.4.0"

[target.'cfg(all(not(target_arch = "xtensa")))'.dependencies]
prost-types = { version = "0.13.3", optional = true }
# tonic = { git = "https://github.com/Catchawink/tonic.git", branch = "hyper-1.0", default-features = false, features = ["prost", "codegen"] }
reqwest = { version = "0.12.9", default-features = false, features = [
    "blocking",
    "json",
    "stream",
] }
surrealdb = { version = "2.1.4", default-features = false, features = ["protocol-ws"], optional = true }

# bevy_cobweb = { version = "0.10.1", optional = true }
# bevy_cobweb_ui = { version = "0.5.1", default-features = false, optional = true }
bevy-async-ecs = { git = "https://github.com/Catchawink/bevy-async-ecs.git", branch = "reflect/serializable-dynamic-types", optional = true }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_arch = "xtensa")))'.dependencies]
bevy-wasm-tasks = { git = "https://github.com/Catchawink/bevy-wasm-tasks.git", branch = "reflect/serializable-dynamic-types", features = ["tokio"], optional = true }

[target.'cfg(all(target_arch = "wasm32"))'.dependencies]
bevy-wasm-tasks = { git = "https://github.com/Catchawink/bevy-wasm-tasks.git", branch = "reflect/serializable-dynamic-types", features = ["wasm"], optional = true }
getrandom = { version = "0.3.1", features = ["wasm_js"] }
wasm-bindgen-futures = "0.4"

[build-dependencies]
tonic-build = { version = "0.10.2", default-features = false, features = ["prost"] }
prost-build = "0.12.3"
